force-app/main/default/objects/NRV10ProductRate__c/NRV10ProductRate__c.object-meta.xml
<CustomObject>
    <description>Fait la jointure entre les produits et les taux</description>
    <label>Taux de produit</label>
    <nameField>
        <displayFormat>PR/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Taux de produits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>