force-app/main/default/objects/NRV10ProductRate__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <formula>product__r.Name &amp; &quot;/&quot; &amp; TEXT((salesrate__r.rate__c*100)) &amp; &quot;%&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom</label>
    <type>Text</type>
</CustomField>