force-app/main/default/objects/NRV10ProductRate__c/fields/product__c.field-meta.xml
<CustomField>
    <fullName>product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Taux de produits</relationshipLabel>
    <relationshipName>Taux_de_produits</relationshipName>
    <type>Lookup</type>
</CustomField>