force-app/main/default/objects/NRV10ProductRate__c/fields/salesrate__c.field-meta.xml
<CustomField>
    <fullName>salesrate__c</fullName>
    <label>Taux de vente</label>
    <referenceTo>NRV10RemunerationRate__c</referenceTo>
    <relationshipLabel>Taux de produits</relationshipLabel>
    <relationshipName>Taux_de_produits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>