force-app/main/default/objects/NRV10ProductRate__c/validationRules/VR_K3_ProductRate_ValidationProduit.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_ProductRate_ValidationProduit</fullName>
    <active>true</active>
    <description>Vérifie que le produit est renseigné</description>
    <errorConditionFormula>AND(!$User.ByPassValidationRule__c,ISBLANK(product__c))</errorConditionFormula>
    <errorDisplayField>product__c</errorDisplayField>
    <errorMessage>Le champs produit doit être renseigné</errorMessage>
</ValidationRule>