force-app/main/default/objects/NRV10ProductRate__c/validationRules/VR_K3_ProductRate_ValidationTaux.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_ProductRate_ValidationTaux</fullName>
    <active>true</active>
    <description>Vérifie que le taux est renseigné</description>
    <errorConditionFormula>AND(!$User.ByPassValidationRule__c, ISBLANK(salesrate__c))</errorConditionFormula>
    <errorDisplayField>salesrate__c</errorDisplayField>
    <errorMessage>Le champs Taux de vente doit être renseigné</errorMessage>
</ValidationRule>