force-app/main/default/objects/NRV10ProductRate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>name__c</columns>
    <columns>product__c</columns>
    <columns>salesrate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>product__c</field>
        <operation>equals</operation>
        <value>VRIPVC_1</value>
    </filters>
    <label>Tout</label>
</ListView>