force-app/main/default/objects/NRV10ProductRate__c/listViews/Taux_produits_VRIPVC_1.listView-meta.xml
<ListView>
    <fullName>Taux_produits_VRIPVC_1</fullName>
    <columns>NAME</columns>
    <columns>name__c</columns>
    <columns>product__c</columns>
    <columns>salesrate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>product__c</field>
        <operation>equals</operation>
        <value>VRIALU_TH</value>
    </filters>
    <label>Taux produits VRIPVC_1</label>
</ListView>